Updated Read Me File

--- a/image_prep.ipynb
+++ b/image_prep.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-17 06:15:46.491094: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "/Users/a1234/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Import necessary libraries\n",
     "import os\n",
@@ -70,17 +81,17 @@
       "\n",
       "[5 rows x 26 columns]\n",
       "        Image Index               image_path\n",
-      "0  00000013_005.png  Images\\00000013_005.png\n",
-      "1  00000013_026.png  Images\\00000013_026.png\n",
-      "2  00000017_001.png  Images\\00000017_001.png\n",
-      "3  00000030_001.png  Images\\00000030_001.png\n",
-      "4  00000032_001.png  Images\\00000032_001.png\n"
+      "0  00000013_005.png  Images/00000013_005.png\n",
+      "1  00000013_026.png  Images/00000013_026.png\n",
+      "2  00000017_001.png  Images/00000017_001.png\n",
+      "3  00000030_001.png  Images/00000030_001.png\n",
+      "4  00000032_001.png  Images/00000032_001.png\n"
      ]
     }
    ],
    "source": [
     "# Load the dataset\n",
-    "labels = pd.read_csv('sample_labels_cleaned.csv')\n",
+    "labels = pd.read_csv('Resources/sample_labels_cleaned.csv')\n",
     "\n",
     "# Display the first few rows of the dataframe to understand its structure\n",
     "print(labels.head())\n",
@@ -274,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
