Bug fix: pickled scaled categorical data.

--- a/balanced_image_prep.ipynb
+++ b/balanced_image_prep.ipynb
@@ -576,7 +576,7 @@
    "outputs": [],
    "source": [
     "# Create data list for dumping\n",
-    "data_dump = [X_cat_train, X_cat_test, X_img_train, X_img_test, Y_train, Y_test]\n",
+    "data_dump = [X_cat_train_scaled, X_cat_test_scaled, X_img_train, X_img_test, Y_train, Y_test]\n",
     "\n",
     "# Open a file with with to auto close and with write permission\n",
     "with open('./Resources/Packed_Data.pkl', 'wb') as file:\n",
