Bug fixes: added channel dimension to image data, and checked/converted RGB images to grayscale.

--- a/balanced_image_prep.ipynb
+++ b/balanced_image_prep.ipynb
@@ -355,11 +355,19 @@
     "    # Stream the raw image data from the specified location\n",
     "    if is_local:\n",
     "        # Just open and append the image to the packed list\n",
-    "        imgs.append(Image.open(img))\n",
+    "        new_img = Image.open(img)\n",
     "    else:\n",
     "        # Load the URL as a raw stream and append\n",
     "        response = requests.get(img, stream=True).raw\n",
-    "        imgs.append(Image.open(response))\n",
+    "        new_img = Image.open(response)\n",
+    "    \n",
+    "    # Ran into a major problem with a few images which were in RGB format,\n",
+    "    # Will handle that with some error checking here.\n",
+    "    if new_img.mode != \"L\":\n",
+    "        # Image is not 8 bit so convert it first\n",
+    "        new_img = new_img.convert(mode=\"L\", dither=None, colors=256)\n",
+    "    # now should be safe to append\n",
+    "    imgs.append(new_img)\n",
     "\n",
     "# View the first image to confirm process\n",
     "imgs[0]"
@@ -384,11 +392,11 @@
     }
    ],
    "source": [
-    "# Resize the images to a more managable size for the CNN\n",
+    "# Convert the images to a smaller size more suitable for CNN\n",
     "target_size = (256, 256)\n",
     "resized_imgs = [img.resize(target_size, resample = Image.LANCZOS) for img in imgs]\n",
     "\n",
-    "# And verify with a view\n",
+    "# And verify size of first\n",
     "resized_imgs[0]"
    ]
   },
@@ -405,21 +413,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.21176471 0.11372549 0.06666667 ... 0.05098039 0.05882353 0.04313726]\n",
-      " [0.20392157 0.10980392 0.06666667 ... 0.05098039 0.05882353 0.04313726]\n",
-      " [0.20392157 0.10588235 0.0627451  ... 0.05098039 0.05882353 0.04705882]\n",
-      " ...\n",
-      " [0.04313726 0.03921569 0.03529412 ... 0.39215687 0.6901961  0.7764706 ]\n",
-      " [0.09803922 0.09411765 0.08627451 ... 0.4        0.7058824  0.7882353 ]\n",
-      " [0.1882353  0.18431373 0.17254902 ... 0.4117647  0.72156864 0.8       ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert all images to floating point numpy arrays\n",
     "#   This will take the pixel value of grayscale images from 0 (black) to 255 (white)\n",
@@ -428,8 +422,17 @@
     "# Normalize the pixel brightness to numbers between 0 and 1\n",
     "normalized_images = [img/255 for img in float_images]\n",
     "\n",
-    "# Verify we now have numbers between 0 and 1 (by looking at first image)\n",
-    "print(normalized_images[0])"
+    "# Convert images to numpy\n",
+    "X_img = np.array(normalized_images)\n",
+    "\n",
+    "# Loop through each image to include the channel dimension\n",
+    "imgs_4d = []\n",
+    "for img in X_img:\n",
+    "    # Add channel dimension\n",
+    "    img = np.expand_dims(img, axis=-1)\n",
+    "\n",
+    "    # Append the image to the array\n",
+    "    imgs_4d.append(img)\n"
    ]
   },
   {
@@ -514,7 +517,7 @@
    ],
    "source": [
     "# Split the data to fit the scale to the training set.\n",
-    "X_cat_train, X_cat_test, X_img_train, X_img_test, Y_train, Y_test = train_test_split(X, normalized_images, Y, random_state=1)\n",
+    "X_cat_train, X_cat_test, X_img_train, X_img_test, Y_train, Y_test = train_test_split(X, imgs_4d, Y, random_state=1)\n",
     "\n",
     "# Double check split via shapes or lengths\n",
     "print(f\"X Cat Train Shape: {X_cat_train.shape}\")\n",
