--- a/model_006_Bab_Version.ipynb
+++ b/model_006_Bab_Version.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-21 08:29:51.167347: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "/Users/a1234/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -54,6 +65,20 @@
     "# Create a new dataframe with image paths and merge with the existing data\n",
     "image_paths_df = pd.DataFrame({'Image Path': image_paths, 'Image Index': image_indices})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -370,6 +395,24 @@
     "plt.ylabel('True label')\n",
     "plt.xlabel('Predicted label')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = OpenAI()\n",
+    "\n",
+    "speech_file_path = Path(__file__).parent / \"speech.mp3\"\n",
+    "response = client.audio.speech.create(\n",
+    "  model=\"tts-1\",\n",
+    "  voice=\"alloy\",\n",
+    "  input=\"Today is a wonderful day to build something people love!\"\n",
+    ")\n",
+    "\n",
+    "response.stream_to_file(speech_file_path)"
    ]
   }
  ],
