--- a/model2.ipynb
+++ b/model2.ipynb
@@ -28,7 +28,8 @@
         "import pathlib\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import os\n"
+        "import os\n",
+        "import pathlib"
       ]
     },
     {
@@ -39,14 +40,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hZssi8O8o7LI",
-        "outputId": "fab3ac71-8e8e-4e86-a150-492c85159a43"
+        "outputId": "779c254f-25a6-4201-bae7-8ac95b1aa0b5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -82,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "7QunIGB4lX1G"
       },
@@ -94,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "Un41O-BhlyBt"
       },
@@ -123,7 +124,7 @@
         "x = keras.layers.Dropout(0.2)(x)\n",
         "\n",
         "# Add a final output layer with 10 units and softmax activation\n",
-        "predictions = keras.layers.Dense(3, activation='sigmoid')(x)"
+        "predictions = keras.layers.Dense(1, activation='sigmoid')(x)"
       ]
     },
     {
@@ -138,7 +139,7 @@
         "model = keras.Model(inputs=base_model.input, outputs=predictions)\n",
         "\n",
         "# Compile the model\n",
-        "model.compile(optimizer=Adam(learning_rate=0.0001), loss='categorical_crossentropy', metrics=['accuracy'])\n"
+        "model.compile(optimizer=Adam(learning_rate=0.0001), loss='binary_crossentropy', metrics=['accuracy'])\n"
       ]
     },
     {
@@ -164,7 +165,7 @@
       "metadata": {
         "id": "WNtr2WqI3g8M"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -176,18 +177,18 @@
       "metadata": {
         "id": "16dZ9gGv31yQ"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jm1IwZbAmMBe",
-        "outputId": "a0fdbb1f-232b-4aaf-fc28-2fce06ef5f22"
+        "outputId": "d1ac3e08-e136-4fd5-b57a-26f7c7566796"
       },
       "outputs": [
         {
@@ -204,25 +205,25 @@
         "train_generator = train_datagen.flow_from_directory(\n",
         "    train_dir,\n",
         "    target_size=(img_height, img_width),\n",
-        "    batch_size=batch_size,\n",
-        "    class_mode='categorical')\n",
+        "    batch_size=batch_size)\n",
+        "\n",
         "\n",
         "valid_generator = valid_datagen.flow_from_directory(\n",
         "    valid_dir,\n",
         "    target_size=(img_height, img_width),\n",
-        "    batch_size=batch_size,\n",
-        "    class_mode='categorical')\n"
+        "    batch_size=batch_size)\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YTeRKH1xmQWk",
-        "outputId": "c114ed42-ad7a-422d-ed7a-9aac4264ea86"
+        "outputId": "3dadaa27-fae8-4fcd-cdc0-1726d2f51c7a"
       },
       "outputs": [
         {
@@ -230,25 +231,7 @@
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "64/64 [==============================] - 57s 891ms/step - loss: 0.6011 - accuracy: 0.6825 - val_loss: 0.5774 - val_accuracy: 0.6953\n",
-            "Epoch 2/10\n",
-            "64/64 [==============================] - 56s 878ms/step - loss: 0.6084 - accuracy: 0.6919 - val_loss: 0.5440 - val_accuracy: 0.7246\n",
-            "Epoch 3/10\n",
-            "64/64 [==============================] - 57s 888ms/step - loss: 0.5997 - accuracy: 0.6860 - val_loss: 0.5637 - val_accuracy: 0.7178\n",
-            "Epoch 4/10\n",
-            "64/64 [==============================] - 56s 884ms/step - loss: 0.6130 - accuracy: 0.6743 - val_loss: 0.5891 - val_accuracy: 0.6963\n",
-            "Epoch 5/10\n",
-            "64/64 [==============================] - 56s 885ms/step - loss: 0.5974 - accuracy: 0.6860 - val_loss: 0.5704 - val_accuracy: 0.7119\n",
-            "Epoch 6/10\n",
-            "64/64 [==============================] - 56s 884ms/step - loss: 0.5889 - accuracy: 0.6914 - val_loss: 0.5785 - val_accuracy: 0.7100\n",
-            "Epoch 7/10\n",
-            "64/64 [==============================] - 56s 882ms/step - loss: 0.5949 - accuracy: 0.6772 - val_loss: 0.5579 - val_accuracy: 0.7139\n",
-            "Epoch 8/10\n",
-            "64/64 [==============================] - 56s 882ms/step - loss: 0.5796 - accuracy: 0.6973 - val_loss: 0.5622 - val_accuracy: 0.7295\n",
-            "Epoch 9/10\n",
-            "64/64 [==============================] - 56s 881ms/step - loss: 0.5584 - accuracy: 0.7119 - val_loss: 0.5726 - val_accuracy: 0.7139\n",
-            "Epoch 10/10\n",
-            "64/64 [==============================] - 56s 883ms/step - loss: 0.5630 - accuracy: 0.7183 - val_loss: 0.5619 - val_accuracy: 0.7295\n"
+            "42/64 [==================>...........] - ETA: 5:49 - loss: 0.7274 - accuracy: 0.5948"
           ]
         }
       ],
@@ -291,7 +274,7 @@
         "id": "zu9IzC0dJb2v",
         "outputId": "e61b04b6-c8d8-485c-cf35-fc5d44191009"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -397,9 +380,9 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
+    "accelerator": "TPU",
     "colab": {
-      "gpuType": "A100",
+      "gpuType": "V28",
       "machine_shape": "hm",
       "provenance": [],
       "include_colab_link": true
